--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@nuxt/image": "^1.10.0",
     "@nuxt/image-edge": "^1.3.0-28493895.369b747",
     "@pinia/nuxt": "^0.10.1",
-    "eslint": "^9.23.0",
     "nuxt": "^3.16.2",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0"
+    "@eslint/js": "^9.24.0",
+    "@types/node": "^22.14.0",
+    "eslint": "^9.24.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.0"
   }
 }
