--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
     "@nuxt/image": "^1.10.0",
     "@nuxt/image-edge": "^1.3.0-28493895.369b747",
     "@pinia/nuxt": "^0.10.1",
+    "@primeuix/themes": "^1.0.1",
+    "@primevue/forms": "^4.3.3",
     "nuxt": "^3.16.2",
     "pinia": "^3.0.1",
+    "primevue": "^4.3.3",
+    "sass": "^1.86.3",
+    "sass-loader": "^16.0.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
+    "@primevue/nuxt-module": "^4.3.3",
     "@types/node": "^22.14.0",
     "eslint": "^9.24.0",
     "prettier": "^3.5.3",
